tests/parse_print/issues/133_3/stderr.expected
Error:
    tests/parse_print/issues/133_3/133_3.essence:7:10:
unexpected 3
expecting expression
    m = [1,2 3]
             ^